# kappa-nn

kappa_test/: create_3d_mesh.ipynb  diffusion.txt  input.txt  output.txt
проект/Kappa/: CMakeLists.txt  Installation.txt  README.md  _gitignore
проект/Kappa-build/Проект1/x64/Debug/: create_3d_mesh.ipynb  diffusion.txt  input.txt  output.txt
проект/Kappa-build/Проект1/x64/Release/: Проект1.iobj
проект/Kappa-build/Проект1/Проект1/: VSS.txt  bulk_visk.cpp  visc.txt
проект/Kappa-build/Проект1/Проект1/x64/Debug/: vc140.idb
проект/Kappa-build/Проект1/Проект1/x64/Debug/Проект1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  Проект1.lastbuildstate
проект/Kappa-build/Проект1/Проект1/x64/Release/Проект1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
проект/Kappa/legacy/src/: legacy_snippets.cpp
проект/Kappa/legacy/tests/: ZrotTest.cpp
проект/Kappa/src/: CMakeLists.txt  exceptions.hpp  kappa.hpp  numeric.cpp  numeric.hpp
проект/Kappa/src/Interaction/: interaction.cpp
проект/Kappa/src/Particles/: atom.cpp  molecule.cpp  particle.cpp
проект/Kappa/src/approximations/: approximation.cpp  approximation_multit.cpp  approximation_onet.cpp
проект/Kappa/src/include/: approximation.hpp  approximation_multit.hpp  approximation_onet.hpp  approximations.hpp  atom.hpp  constants.h  interaction.hpp  logging.hpp  mixture.hpp  models.h  molecule.hpp  particle.hpp  particles.hpp
проект/Kappa/src/mixtures/: mixture.cpp
проект/Kappa/tests/approximations/: ZintTest.cpp  cvibr_multit.cpp
проект/Kappa/tests/basic/: basicTest.cpp
проект/Kappa/tests/interaction/: CMakeLists.txt  H2H_omegatest.cpp  cs_dissTest.cpp  interactionTest.cpp  interaction_speedtest.cpp  k_VTTest.cpp  k_dissTest.cpp  k_diss_ILTtest.cpp  k_exchArrhTest.cpp  k_exchTest.cpp  omegaBCEtest.cpp  omegaTest.cpp  omega_nc_test.cpp  vssTest.cpp  vss_and_neutral_e.cpp
проект/Kappa/tests/mixtures/: caching-sts.cpp  diffusion.cpp  diffusion_air.cpp  diffusion_old.cpp  heatcond-sts-nonrigid.cpp  heatcond-sts.cpp  ionized_mixture_creation.cpp  mixture-sts-basic.cpp  mixture-sts-bulk-nonrigid.cpp  mixture-sts-bulk-rigid.cpp  mixture-sts-shear-oxygen.cpp  mixture-sts-shear.cpp  mixture_string_creation.cpp  thermodiffusion.cpp
проект/Kappa/tests/particles/: CMakeLists.txt  dumpspectrumTest.cpp  particleProperties.cpp  particleTest.cpp
проект/Kappa/tests/shockwave/1T/: 1T-CO2.cpp  binary.cpp
проект/Kappa/tests/speed/: basicspeedtest.cpp
проект/Kappa/utils/convert/: DBconv-interaction.ipynb  DBconv-particles.ipynb  conv_interaction_DB.py  conv_particle_DB.py
проект/Kappa/utils/convert/csv2YamlParticles/: CMakeLists.txt  csv2YamlParticles.cpp
проект/Kappa/utils/script/: convertAllCsvSingleFile
